--- a/gea/templates/index.html
+++ b/gea/templates/index.html
@@ -37,7 +37,7 @@
       <span class="pull-right"><a
           href="/admin/gea/expediente/?cancelado__exact=0&orden_pendiente=si&sin_inscripcion__exact=0"
           class="btn btn-warning" title="Ver todos"><i class="fa fa-plus"></i></a></span>
-      <h3 class="panel-title"><i class="fa fa-file-text"></i> <strong>Órdenes de trabajo</strong></h3>
+      <h3 class="panel-title"><i class="fa fa-file-signature"></i> <strong>Órdenes de trabajo</strong></h3>
       Últimas {{ insc_list.count }} órdenes de trabajo.
     </div>
     <div class="panel-body">
