--- a/gea/templates/base.html
+++ b/gea/templates/base.html
@@ -11,7 +11,8 @@
   <title>{% block title %}GEA{% endblock title %}</title>
   <!-- Bootstrap core CSS -->
   <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-  <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"
+    integrity="sha256-KzZiKy0DWYsnwMF+X1DvQngQ2/FxF7MF3Ff72XcpuPs=" crossorigin="anonymous"></script>
   {% block css %}
   {% endblock css %}
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -26,31 +27,31 @@
 
 <body>
   <!-- MENU -->
-  {% block menu %}
-  {% endblock menu %}
+  {% block menu %}{% endblock menu %}
+  {% block float %}{% endblock float %}
   <div class="container">
     {% block content %}
     {% endblock content %}
-    {% block footer %}
-    <!-- FOOTER -->
-    <footer>
-      <div class="container">
-        <div class="row clearfix">
-          <div class="col-md-12 column">
-            <hr>
-            {% block top %}<p class="pull-right"><i class="fa fa-chevron-up"></i> <a href="#">Arriba</a></p>
-            {% endblock top %}
-            <p>GEA &copy; {% now "Y" %} &middot; Todos los derechos reservados. <a rel="license"
-                href="https://creativecommons.org/licenses/by-nc-sa/3.0/" target="_blank"><img
-                  alt="Creative Commons License" style="border-width:0"
-                  src="https://i.creativecommons.org/l/by-nc-sa/3.0/br/80x15.png" /></a>
-            </p>
-          </div>
-        </div>
-      </div><!-- footer-container -->
-    </footer>
-    {% endblock footer %}
   </div> <!-- /container -->
+  {% block footer %}
+  <!-- FOOTER -->
+  <footer>
+    <div class="container">
+      <div class="row clearfix">
+        <div class="col-md-12 column">
+          <hr>
+          {% block top %}<p class="pull-right"><i class="fa fa-chevron-up"></i> <a href="#">Arriba</a></p>
+          {% endblock top %}
+          <p>GEA &copy; {% now "Y" %} &middot; Todos los derechos reservados. <a rel="license"
+              href="https://creativecommons.org/licenses/by-nc-sa/3.0/" target="_blank"><img
+                alt="Creative Commons License" style="border-width:0"
+                src="https://i.creativecommons.org/l/by-nc-sa/3.0/br/80x15.png" /></a>
+          </p>
+        </div>
+      </div>
+    </div><!-- footer-container -->
+  </footer>
+  {% endblock footer %}
   <!-- Bootstrap core JavaScript -->
   <!-- Placed at the end of the document so the pages load faster -->
   <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
