--- a/gea/templates/nota.html
+++ b/gea/templates/nota.html
@@ -23,7 +23,7 @@
       <table>
         <tbody>
           <tr>
-            <td colspan={{ e.expedienteprofesional_set.count }} style="text-align: center;">
+            <td colspan={{ e.profesionales_firmantes.count }} style="text-align: center;">
               <span style="font-size:large; margin: auto;">
                 <strong><em>Estudio de Agrimensura &quot;Enrique A. Pestarini&quot;</em></strong>
               </span><br>
@@ -34,12 +34,12 @@
             </td>
           </tr>
           <tr>
-          {% if e.expedienteprofesional_set %}
-            {% for ep in e.expedienteprofesional_set.all %}
+          {% if e.profesionales_firmantes %}
+            {% for profesional in e.profesionales_firmantes.all %}
             <td style="border: none; vertical-align: top; padding: 3px; {% if forloop.last %} text-align: right{% endif %}">
-              <strong>{{ ep.profesional.nombres }} {{ ep.profesional.apellidos }}</strong><br>
-              <em>{{ ep.profesional.titulo }} – ICoPA Nº {{ ep.profesional.icopa }}</em><br>
-              <a href="mailto:{{ ep.profesional.email }}">{{ ep.profesional.email }}</a>
+              <strong>{{ profesional.nombres }} {{ profesional.apellidos }}</strong><br>
+              <em>{{ profesional.titulo }} – ICoPA Nº {{ profesional.icopa }}</em><br>
+              <a href="mailto:{{ profesional.email }}">{{ profesional.email }}</a>
             </td>
             {% endfor %}
           {% endif %}
