--- a/gea/templates/gea/doc/visac.html
+++ b/gea/templates/gea/doc/visac.html
@@ -5,13 +5,13 @@
 
 {% block content %}
 {% if e %}
-  <br />
+  <br>
   <div style="float: right; font-size: smaller">
     <em>Expte. <a href="/admin/gea/expediente/{{ e.id }}/">{{ e.id }}</a></em>
   </div>
   {% if e.expedientelugar_set.all %}
     {% for el in e.expedientelugar_set.all %}
-        <br /><br /><br />
+        <br><br><br>
         <div style="text-align: right">Gálvez, {% now 'j \d\e F, Y' %}</div>
         <div>
           <div>
@@ -21,25 +21,22 @@
           </div>
           <p>De mi mayor consideración:</p>
           <p class="sangria">Quien suscribe,
-          {% if e.expedienteprofesional_set.all %}
-            {% for ep in e.expedienteprofesional_set.all %}
-              <strong>{{ ep.profesional.titulo }} {{ ep.profesional.nombres }} {{ ep.profesional.apellidos }}</strong>,
-            {% endfor %}
-          {% endif %}
+          {% for profesional in e.profesionales_firmantes.all %}
+            <strong>
+              {{ profesional.titulo }}
+              {{ profesional.nombres }}
+              {{ profesional.apellidos }}</strong>, 
+          {% endfor %}
           SOLICITA la visación del Plano de
-          {% if e.expedienteobjeto_set.all %}
-            {% for ep in e.expedienteobjeto_set.all %}
-              <strong>{{ ep.objeto.nombre.upper }}</strong>
-            {% endfor %}
-          {% endif %}
+          {% for objeto in e.objetos.all %}
+            <strong>{{ objeto.nombre.upper }}</strong>, 
+          {% endfor %}
           de la propiedad de
-          {% if e.expedientepersona_set.all %}
-            {% for ep in e.expedientepersona_set.all %}
-              {% if ep.propietario %}
-                <strong>{% if ep.sucesion %}Sucesores de {% endif %}{{ ep.persona.nombres }} {{ ep.persona.apellidos }}</strong>,
-              {% endif %}
-            {% endfor %}
-          {% endif %}
+          {% for p in e.propietarios %}
+            <strong>
+            {% if p.sucesion %}Sucesor{% if e.firmantes_count > 1 %}es{% endif %} de {% endif %}
+            {{ p.persona.nombre_completo }}</strong>,
+          {% endfor %}
           ubicada en su distrito: {{ e.expedientepartida_set.first.partida.sd.ds.nombre|upper }}, {{ el.lugar.nombre }}
           {% if el.catastrolocal_set.all %}
             (
@@ -50,6 +47,17 @@
           {% endif %}.</p>
           <p class="sangria">Se adjuntan dos copias del plano.</p>
           <p class="sangria">Sin más, saludo a UD. muy atte.</p>
+        </div>
+        <br><br><br><br><br>
+        <div style="text-align: right;">
+          {% for profesional in e.profesionales_firmantes.all %}
+          <span style="text-decoration: overline">
+            {{ profesional.nombres }} {{ profesional.apellidos }}
+          </span><br>
+          {{ profesional.titulo }}<br>
+          ICoPA Nº {{ profesional.icopa }}<br>
+          CUIT: {{ profesional.cuit_cuil }}
+          {% endfor %}
         </div>
 
     {% endfor %}
