--- a/gea/templates/gea/expediente_detail.html
+++ b/gea/templates/gea/expediente_detail.html
@@ -23,16 +23,16 @@
         <!-- Comitentes -->
         {% if object.comitentes_count %}
         <h2><i class="fa fa-file-signature"></i> Comitente{% if object.comitentes_count > 1%}s{% endif %}:
-        {% for ep in object.get_comitentes %}
-            <a href="{% url 'persona' ep.persona.id %}">{{ ep.persona.nombre_completo }}</a>{% if not forloop.last %},{% endif %}
+        {% for p in object.comitentes %}
+            <a href="{% url 'persona' p.persona.id %}">{{ p.persona.nombre_completo }}</a>{% if not forloop.last %},{% endif %}
         {% endfor %}
         </h2>
         {% endif %}
         <!-- Propietarios -->
         {% if object.propietarios_count %}
         <h3>{% if object.propietarios_count > 1 %}<i class="fa fa-users"></i> Propietarios:{% else %}<i class="fa fa-user"></i> Propietario:{% endif %}
-        {% for ep in object.get_propietarios %}
-            <a href="{% url 'persona' ep.persona.id %}">{{ ep.persona.nombre_completo }}</a>{% if not forloop.last %},{% endif %}
+        {% for p in object.propietarios %}
+            <a href="{% url 'persona' p.persona.id %}">{{ p.persona.nombre_completo }}</a>{% if not forloop.last %},{% endif %}
         {% endfor %}
         </h3>
         {% endif %}
