--- a/gea/templates/gea/tools/calendar.html
+++ b/gea/templates/gea/tools/calendar.html
@@ -1,4 +1,4 @@
-{% extends "menu.html" %}
+{% extends "base.html" %}
 {% block title %}GEA | Calendario{% endblock %}
 {% block content %}
 {% load static %}
