--- a/gea/templates/gea/expediente_list.html
+++ b/gea/templates/gea/expediente_list.html
@@ -1,22 +1,19 @@
-{% extends "menu.html" %}
+{% extends "base.html" %}
 {% block title %}GEA | Listado de Expedientes{% endblock title %}
-
-{# set menu in active mode #}
-{% block nav-list-exp %} class="active"{% endblock %}
 
 {% block content %}
 {% load tags %}
 <div class="page-header">
-  <h1><i class="fa fa-folder"></i> <a href="{% url 'expedientes' %}">Listado de Expedientes</a></h1>
+  <h1><i class="fas fa-fw fa-folder"></i> <a href="{% url 'expedientes' %}">Listado de Expedientes</a></h1>
   <strong>{{ count }}</strong> expediente{% if count > 1 %}s{% endif %} filtrado{% if count > 1 %}s{% endif %}
 </div>
 <div class="well well-sm col-md-12">
   <form class="navbar-form navbar-right" action="." method="get">
     <div class="form-group">
       <div class="input-group input-group-sm">
-        <span class="input-group-addon"><i class="fa fa-folder"></i> <i class="fa fa-user"></i> <i class="fa fa-thumbtack"></i></span>
+        <span class="input-group-addon"><i class="fas fa-fw fa-folder"></i> <i class="fas fa-fw fa-user"></i> <i class="fas fa-fw fa-thumbtack"></i></span>
         <input type="text" id="search" name="search" placeholder="Expediente/Persona/Lugar/PII/Plano/CoPA" class="form-control" value="{{ request.GET.search }}" size="35">
-        <span class="input-group-btn"><button type="submit" class="btn btn-sm btn-success"><i class="fa fa-search"></i></button></span>
+        <span class="input-group-btn"><button type="submit" class="btn btn-sm btn-success"><i class="fas fa-fw fa-search"></i></button></span>
       </div>
       <div class="btn-group">
         <a class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
@@ -85,7 +82,7 @@
     </tr>
     {% empty %}
     <div class="alert alert-info" role="alert">
-      <i class="fa fa-info-circle" aria-hidden="true"></i>
+      <i class="fas fa-fw fa-info-circle" aria-hidden="true"></i>
       <span class="sr-only">Información:</span>
       No se encontraron Expedientes.
     </div>
