--- a/gea/templates/gea/persona_detail.html
+++ b/gea/templates/gea/persona_detail.html
@@ -1,17 +1,14 @@
-{% extends "menu.html" %}
+{% extends "base.html" %}
 {% block title %}GEA | {{ object.nombre_completo }}{% endblock title %}
-
-{# set menu in active mode #}
-{% block nav-per %} class="active"{% endblock %}
 
 {% block content %}
 <div class="col-lg-8">
     <div class="col-md-2 column">
-        <i class="fa fa-user"></i>
+        <i class="fas fa-fw fa-user"></i>
     </div>
     <div class="col-md-offset-3 column">
         <h1>{{ object.nombre_completo }}</h1>
-        <h4><i class="fa fa-user"></i> <a href="#">{{ object.documento }}</a></h4>
+        <h4><i class="fas fa-fw fa-user"></i> <a href="#">{{ object.documento }}</a></h4>
     </div>
     </br>
     <table class="table table-user-information">
