--- a/gea/templates/gea/persona_list.html
+++ b/gea/templates/gea/persona_list.html
@@ -1,21 +1,18 @@
-{% extends "menu.html" %}
+{% extends "base.html" %}
 {% block title %}GEA | Listado de Personas{% endblock title %}
-
-{# set menu in active mode #}
-{% block nav-list-per %} class="active"{% endblock %}
 
 {% block content %}
 <div class="page-header">
-  <h1><i class="fa fa-users"></i> <a href="{% url 'personas' %}">Listado de Personas</a></h1>
+  <h1><i class="fas fa-fw fa-users"></i> <a href="{% url 'personas' %}">Listado de Personas</a></h1>
   <strong>{{ count }}</strong> persona{% if count > 1 %}s{% endif %} filtrada{% if count > 1 %}s{% endif %}
 </div>
 <div class="well well-sm col-md-12">
   <form class="navbar-form navbar-right" action="." method="get">
     <div class="form-group">
       <div class="input-group input-group-sm">
-        <span class="input-group-addon"><i class="fa fa-user"></i> <i class="fa fa-folder"></i> <i class="fa fa-thumb-tack"></i></span>
+        <span class="input-group-addon"><i class="fas fa-fw fa-user"></i> <i class="fas fa-fw fa-folder"></i> <i class="fas fa-fw fa-thumbtack"></i></span>
         <input type="text" id="search" name="search" placeholder="Persona/Expediente/Lugar/PII/Plano" class="form-control" value="{{ request.GET.search }}" size="35">
-        <span class="input-group-btn"><button type="submit" class="btn btn-sm btn-success"><i class="fa fa-search"></i></button></span>
+        <span class="input-group-btn"><button type="submit" class="btn btn-sm btn-success"><i class="fas fa-fw fa-search"></i></button></span>
       </div>
     </div>
   </form>
@@ -75,7 +72,7 @@
     {% endif %}
     {% empty %}
     <div class="alert alert-info" role="alert">
-      <i class="fa fa-info-circle" aria-hidden="true"></i>
+      <i class="fas fa-fw fa-info-circle" aria-hidden="true"></i>
       <span class="sr-only">Información:</span>
       No se encontraron Personas.
     </div>
