--- a/gea/templates/gea/search/set_form.html
+++ b/gea/templates/gea/search/set_form.html
@@ -1,19 +1,16 @@
-{% extends "menu.html" %}
-
-{# set menu in active mode #}
-{% block nav-set %} class="active"{% endblock %}
+{% extends "base.html" %}
 
 {% block title %}GEA | Buscar Informe Catastral{% endblock %}
 
 {% block content %}
 <form class="form-horizontal col-lg-6" method="post">{% csrf_token %}
-  <legend><i class="fa fa-sticky-note"></i> Buscar Informe Catastral emitido por SCIT</legend>
+  <legend><i class="fas fa-fw fa-sticky-note"></i> Buscar Informe Catastral emitido por SCIT</legend>
   <fieldset>
     <div class="form-group">
       <table class="table table-condensed table-hover">
       {{ form.as_table }}
       </table>
-      <button type="submit" class="btn btn-primary pull-right"><i class="fa fa-search"></i> Buscar</button>
+      <button type="submit" class="btn btn-primary pull-right"><i class="fas fa-fw fa-search"></i> Buscar</button>
     </div>
   </fieldset>
 </form>
