--- a/gea/templates/gea/tools/caratula_form.html
+++ b/gea/templates/gea/tools/caratula_form.html
@@ -1,13 +1,10 @@
-{% extends "menu.html" %}
-
-{# set menu in active mode #}
-{% block nav-carat %} class="active"{% endblock %}
+{% extends "base.html" %}
 
 {% block title %}GEA | Carátula{% endblock %}
 
 {% block content %}
 <form class="form-horizontal col-lg-6" method="post">{% csrf_token %}
-  <legend><i class="fa fa-sticky-note"></i> Generar Carátula de Plano de Mensura</legend>
+  <legend><i class="fas fa-fw fa-sticky-note"></i> Generar Carátula de Plano de Mensura</legend>
   <fieldset>
     <div class="form-group">
       <table class="table table-condensed table-hover">
