--- a/gea/templates/gea/tools/sie_form.html
+++ b/gea/templates/gea/tools/sie_form.html
@@ -1,13 +1,10 @@
-{% extends "menu.html" %}
-
-{# set menu in active mode #}
-{% block nav-tool-sie %} class="active"{% endblock %}
+{% extends "base.html" %}
 
 {% block title %}GEA | Sistema de Información de Expedientes del SCIT{% endblock %}
 
 {% block content %}
 <form class="form-horizontal col-lg-6" method="post">{% csrf_token %}
-  <legend><i class="fa fa-folder"></i> Consultar estado de Expediente SCIT</legend>
+  <legend><i class="fas fa-fw fa-folder"></i> Consultar estado de Expediente SCIT</legend>
   <fieldset>
     <div class="form-group">
       <table class="table table-condensed table-hover">
