--- a/gea/templates/index.html
+++ b/gea/templates/index.html
@@ -1,4 +1,4 @@
-{% extends "menu.html" %}
+{% extends "base.html" %}
 {% block title %}GEA | Inicio{% endblock %}
 {% block content %}
 {% load static %}
@@ -10,8 +10,8 @@
   <div class="panel panel-primary">
     <div class="panel-heading">
       <span class="pull-right"><a href="/admin/gea/expediente/?inscripto=si" class="btn btn-primary"
-          title="Ver todos"><i class="fa fa-plus"></i></a></span>
-      <h3 class="panel-title"><i class="fa fa-map"></i> <strong>Planos inscriptos</strong></h3>
+          title="Ver todos"><i class="fas fa-plus"></i></a></span>
+      <h3 class="panel-title"><i class="fas fa-fw fa-map"></i> <strong>Planos inscriptos</strong></h3>
       Últimos {{ insc_list.count }} expedientes inscriptos.
     </div>
     <div class="panel-body">
@@ -36,8 +36,8 @@
     <div class="panel-heading">
       <span class="pull-right"><a
           href="/admin/gea/expediente/?cancelado__exact=0&orden_pendiente=si&sin_inscripcion__exact=0"
-          class="btn btn-warning" title="Ver todos"><i class="fa fa-plus"></i></a></span>
-      <h3 class="panel-title"><i class="fa fa-file-signature"></i> <strong>Órdenes de trabajo</strong></h3>
+          class="btn btn-warning" title="Ver todos"><i class="fas fa-plus"></i></a></span>
+      <h3 class="panel-title"><i class="fas fa-fw fa-file-signature"></i> <strong>Órdenes de trabajo</strong></h3>
       Últimas {{ insc_list.count }} órdenes de trabajo.
     </div>
     <div class="panel-body">
@@ -59,7 +59,7 @@
 <div class="col-md-4">
   <div class="panel panel-success">
     <div class="panel-heading">
-      <h3 class="panel-title"><i class="fa fa-compass"></i> <strong>Relevamientos</strong></h3>
+      <h3 class="panel-title"><i class="fas fa-fw fa-compass"></i> <strong>Relevamientos</strong></h3>
       Últimos {{ relev_list.count }} relevamientos.
     </div>
     <div class="panel-body">
@@ -82,7 +82,7 @@
 <div class="col-md-8">
   <div class="panel panel-info">
     <div class="panel-heading">
-      <h3 class="panel-title"><i class="fa fa-folder-open"></i> <strong>Alta de Expedientes</strong></h3>
+      <h3 class="panel-title"><i class="fas fa-fw fa-folder-open"></i> <strong>Alta de Expedientes</strong></h3>
       Últimas {{ open_list.count }} altas.
     </div>
     <div class="panel-body">
@@ -106,7 +106,7 @@
 <!--      <div class="col-md-4">
         <div class="panel panel-info">
           <div class="panel-heading">
-            <h3 class="panel-title"><i class="fa fa-building"></i> <strong>Comunas/Municipios</strong></h3>
+            <h3 class="panel-title"><i class="fas fa-fw fa-building"></i> <strong>Comunas/Municipios</strong></h3>
           </div>
           <div class="panel-body">
             Panel content
@@ -116,7 +116,7 @@
       <div class="col-md-4">
         <div class="panel panel-warning">
           <div class="panel-heading">
-            <h3 class="panel-title"><i class="fa fa-building"></i> <strong>Ministerios</strong></h3>
+            <h3 class="panel-title"><i class="fas fa-fw fa-building"></i> <strong>Ministerios</strong></h3>
           </div>
           <div class="panel-body">
             Panel content
@@ -126,7 +126,7 @@
       <div class="col-md-4">
         <div class="panel panel-success">
           <div class="panel-heading">
-            <h3 class="panel-title"><i class="fa fa-map-marker"></i> <strong>Georreferenciación</strong></h3>
+            <h3 class="panel-title"><i class="fas fa-fw fa-map-marker"></i> <strong>Georreferenciación</strong></h3>
           </div>
           <div class="panel-body">
             Panel content
@@ -136,7 +136,7 @@
       <div class="col-md-4">
         <div class="panel panel-danger">
           <div class="panel-heading">
-            <h3 class="panel-title"><i class="fa fa-compass"></i> <strong>Relevamientos pendientes</strong></h3>
+            <h3 class="panel-title"><i class="fas fa-fw fa-compass"></i> <strong>Relevamientos pendientes</strong></h3>
           </div>
           <div class="panel-body">
             Panel content
@@ -149,15 +149,15 @@
       <!--            <form class="navbar-form navbar-right" action="." method="get">
               <div class="form-group">
                 <div class="input-group input-group-sm">
-                  <span class="input-group-addon"><i class="fa fa-folder"></i> <i class="fa fa-user"></i> <i class="fa fa-thumb-tack"></i></span>
+                  <span class="input-group-addon"><i class="fas fa-fw fa-folder"></i> <i class="fas fa-fw fa-user"></i> <i class="fas fa-fw fa-thumb-tack"></i></span>
                   <input type="text" id="search" name="search" placeholder="Expediente/Persona/Lugar/PII" class="form-control" value="{{ request.GET.search }}" size="30">
-                  <span class="input-group-btn"><button type="submit" class="btn btn-sm btn-success"><i class="fa fa-search"></i></button></span>
+                  <span class="input-group-btn"><button type="submit" class="btn btn-sm btn-success"><i class="fas fa-fw fa-search"></i></button></span>
                 </div>
               </div>
             </form>-->
       <span class="pull-right"><a href="{% url 'expedientes' %}" class="btn btn-primary"><i
-            class="fa fa-plus fa-lg"></i></a></span>
-      <h3 class="panel-title"><i class="fa fa-folder-open"></i> <strong>Expedientes abiertos</strong></h3>
+            class="fas fa-plus fa-lg"></i></a></span>
+      <h3 class="panel-title"><i class="fas fa-fw fa-folder-open"></i> <strong>Expedientes abiertos</strong></h3>
       <strong>{{ count }}</strong> expediente{% if count > 1 %}s{% endif %} filtrado{% if count > 1 %}s{% endif %}
     </div>
     <div class="panel-body">
@@ -209,14 +209,14 @@
               {% if ep.set_ruta %}<a
                 href="{{ ep.set_ruta }}">{% endif %}{{ ep.partida.sd }}-{{ ep.partida }}{% if ep.set_ruta %}</a>{% endif %}
               <a href='http://scit.santa-fe.gov.ar/tramites/consultapartida.php?parti={{ ep.partida.sd }}{{ ep.partida.pii|stringformat:"06d" }}{{ ep.partida.subpii|stringformat:"04d" }}&origen=1'
-                target="_blank"><i class="fa fa-file"></i></a>{% if not forloop.last %}<br>{% endif %}
+                target="_blank"><i class="fas fa-fw fa-file"></i></a>{% if not forloop.last %}<br>{% endif %}
               {% endfor %}
               {% endif %}
             </td>
           </tr>
           {% empty %}
           <div class="alert alert-info" role="alert">
-            <i class="fa fa-info-circle" aria-hidden="true"></i>
+            <i class="fas fa-fw fa-info-circle" aria-hidden="true"></i>
             <span class="sr-only">Información:</span>
             No se encontraron Expedientes.
           </div>
@@ -227,4 +227,3 @@
   </div>
 </div>
 {% endblock %}
-{% block top %}{% endblock %}
