--- a/gea/templates/registration/logged_out.html
+++ b/gea/templates/registration/logged_out.html
@@ -3,9 +3,10 @@
 {% block title %}GEA | Logout{% endblock %}
 
 {% block content %}
-<h2><i class="fa fa-sign-out-alt"></i> <strong>GEA</strong> Sesión cerrada</h2>
-<div class="form-horizontal col-md-offset-4 col-md-4" method="post">{% csrf_token %}
-    <p>Ingrese <a href="{% url 'login'%}">aquí para identificarse nuevamente</a></p>
+<h2><i class="fas fa-fw fa-sign-out-alt"></i> <strong>GEA</strong> Sesión cerrada</h2>
+<br>
+<div class="text-center" method="post">{% csrf_token %}
+    <a href="{% url 'login'%}" class="btn btn-primary">Ingresar nuevamente</a></p>
 </div>
 {% endblock %}
 {% block top %}{% endblock %}
